# bill-advisor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  dev.sh  pyproject.toml  skills-lock.json
.github/workflows/: deploy.yml
api/: main.py  rate_limiter.py
bill_advisor/: _cache.py  audit.py  comparator.py  extraction.py  logger.py  metrics.py  price_client.py  pvpc_client.py  schemas.py
bill_advisor/rag/: query.py
bill_advisor/rag/corpus/: alquiler-contador.md  autoconsumo.md  impuestos-electricos.md  otros-servicios.md  peajes-cargos.md  pvpc-vs-libre-fija.md  terminos-potencia.md
docs/: next-steps.md
docs/adr/: 0001-vision-llm-for-pdf-extraction.md  0002-tool-use-not-messages-parse.md  0003-streamlit-for-ui.md  0004-pvpc-sub-block-schema.md  0005-pdf-first-datadis-later.md  0006-same-comercializadora-only.md  0007-flat-package-layout.md  0008-prompt-caching.md  0009-direct-esios-over-mcp.md  0010-uniform-kwh-distribution.md  0011-deterministic-audit.md  0012-defer-tests-and-ci.md  0013-rate-limiting-strategy.md  0014-structured-logging.md  0015-prometheus-metrics.md  0016-ci-cd-deploy.md  0017-secrets-management.md  README.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  ChatPanel.tsx  PriceChart.tsx  ResultsPanel.tsx  UploadPanel.tsx  api.ts  index.css
