[project]
name = "bill-advisor"
version = "0.1.0"
description = "AI-powered Spanish electricity bill auditor and advisor"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Raúl Reguillo", email = "raul.reguillo@gmail.com" }]
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "streamlit>=1.30",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bill_advisor", "api"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["Dockerfile", ".dockerignore"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
